--- a/Franstastic/src/app/login/login.component.html
+++ b/Franstastic/src/app/login/login.component.html
@@ -1,2 +1,6 @@
-<h1>Login to your account using Google</h1>
-<button (click)="login()">Login</button>
+<div align="center">
+  <h1>Franstastic Competities!</h1>
+  <img width="300" alt="Angular Logo" src="https://www.bekendeartiestboeken.nl/static/artiesten/3157-frans-bauer-boeken-800-600.jpg">
+  <h2>Login met je Google account</h2>
+  <button (click)="login()">Login</button>
+</div>
