Competition details and participants added

--- a/Franstastic/src/styling/mixins.scss
+++ b/Franstastic/src/styling/mixins.scss
@@ -5,8 +5,11 @@
   -moz-border-radius: 50px;
 
   background-color: #fcc283;
-  border: 1px solid transparent;
+  border: 10px solid transparent;
   margin-bottom: 20px;
+
+  font-size: 12px;
+  font-weight: bold;
 }
 
 // Styling voor tables
