--- a/Franstastic/src/app/competition/competition-participants/competition-participants.component.html
+++ b/Franstastic/src/app/competition/competition-participants/competition-participants.component.html
@@ -1,3 +1,14 @@
-<p>
-  competition-participants works!
-</p>
+<app-menu></app-menu>
+
+<div class="main">
+  Naam: <input [(ngModel)]="participantName"/>
+  <!--<button (click)="addParticipant()">Deelnemer toevoegen</button>-->
+  <table>
+    <tr>
+      <th>Deelnemers</th>
+    </tr>
+    <tr *ngFor="let singer of singers">
+      <td>{{singer.name}}</td>
+    </tr>
+  </table>
+</div>
