--- a/Franstastic/src/app/competition/competition-tournament/competition-tournament.component.html
+++ b/Franstastic/src/app/competition/competition-tournament/competition-tournament.component.html
@@ -2,4 +2,15 @@
 
 <div class="main">
   <button (click)="generateTournament()">Genereer toernooi</button>
+
+  <div class="rounds" *ngFor="let round of rounds">
+    <h2>{{round.name}}</h2>
+    <table>
+      <tr *ngFor="let match of round.matches">
+        <td>{{ match.player1.name}}</td>
+        <td>vs</td>
+        <td>{{ match.player2.name}}</td>
+      </tr>
+    </table>
+  </div>
 </div>
