--- a/Franstastic/src/app/competition/competition-poule/competition-poule.component.scss
+++ b/Franstastic/src/app/competition/competition-poule/competition-poule.component.scss
@@ -1,3 +1,11 @@
 @import "../../../styling/dragula.css";
+@import "../../../styling/mixins";
+
+@include table-style;
+
+.rounds {
+  @include rounds;
+}
+
 
 
