--- a/Franstastic/src/app/competition/competition-poule/competition-poule.component.scss
+++ b/Franstastic/src/app/competition/competition-poule/competition-poule.component.scss
@@ -7,5 +7,16 @@
   @include rounds;
 }
 
+.poules {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: 50px;
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-bottom: 1.5em;
+  display: inline-block;
+  border:1px solid black;
+}
+
 
 
