--- a/Franstastic/src/app/competition/competition-knockout/competition-knockout.component.html
+++ b/Franstastic/src/app/competition/competition-knockout/competition-knockout.component.html
@@ -5,14 +5,14 @@
     <button (click)="generateKnockout()">Genereer knockout-competitie</button>
   </div>
 
-  <!--<div class="rounds" *ngFor="let round of rounds">
+  <div class="rounds" *ngFor="let round of rounds">
     <h2>{{round.name}}</h2>
     <table>
-      <tr *ngFor="let match of round.matches">
+      <tr class="matches" *ngFor="let match of round.matches">
         <td>{{ match.player1.name}}</td>
         <td>vs</td>
         <td>{{ match.player2.name}}</td>
       </tr>
     </table>
-  </div>-->
+  </div>
 </div>
