--- a/Franstastic/src/app/competition/competition-overview/competition-overview.component.html
+++ b/Franstastic/src/app/competition/competition-overview/competition-overview.component.html
@@ -1,7 +1,7 @@
 <app-menu></app-menu>
 
 <div class="main">
-  <div style="text-align:center">
+  <div class="header">
     <h1>Welkom bij Franstastic Competities!</h1>
     <img width="300" alt="Angular Logo" src="https://www.bekendeartiestboeken.nl/static/artiesten/3157-frans-bauer-boeken-800-600.jpg">
   </div>
