bug fixes and new tests

--- a/Franstastic/src/app/competition/competition-details/competition-details.component.html
+++ b/Franstastic/src/app/competition/competition-details/competition-details.component.html
@@ -7,6 +7,7 @@
   <button *ngIf="competitionTypes.toernooi" [routerLink]="['tournamentoverview']">Toernooi weergave</button>
   <button *ngIf="competitionTypes.ko" [routerLink]="['knockoutoverview']">Knockout weergave</button>
   <button [routerLink]="['matches']">Wedstrijden</button>
+  <button [routerLink]="['spectate']">Spectate</button>
   <button >Wedstrijdschema</button><br/>
 </div>
 
