--- a/Franstastic/src/app/competition/competition-knockout/competition-knockout.component.scss
+++ b/Franstastic/src/app/competition/competition-knockout/competition-knockout.component.scss
@@ -1,4 +1,16 @@
-.matches {
-  background-color: #C21F39;
-  border: 1px solid black;
+table
+{
+  border-collapse: collapse;
+  margin: 50px;
 }
+
+table tr td {
+  border: 1px solid black;
+  padding: 10px 7px;
+}
+
+table tr th {
+  border: none;
+  padding-top: 40px;
+}
+
