--- a/Franstastic/src/styling/mixins.scss
+++ b/Franstastic/src/styling/mixins.scss
@@ -6,7 +6,7 @@
 
   background-color: #fcc283;
   border: 10px solid transparent;
-  margin-bottom: 20px;
+  margin-bottom: (1080px / 50);
 
   font-size: 12px;
   font-weight: bold;
@@ -28,11 +28,13 @@
   }
 }
 
+// Styling voor rondes
 @mixin rounds {
   margin-left: 30px;
   display: inline-block;
 }
 
+// Styling voor poules
 @mixin poules {
   margin-top: 30px;
   margin-bottom: 30px;
