--- a/Franstastic/src/app/competition/competition-matches/competition-matches.component.html
+++ b/Franstastic/src/app/competition/competition-matches/competition-matches.component.html
@@ -11,6 +11,8 @@
             <th>vs</th>
             <th>Speler 2</th>
             <th>Speeldatum & tijd</th>
+            <th>Speler 1 Score</th>
+            <th>Speler 2 Score</th>
             <th>opslaan</th>
           </tr>
           <tr *ngFor="let match of poule.matches">
@@ -18,6 +20,8 @@
             <td>vs</td>
             <td>{{ match.player2.name}}</td>
             <td><input [(ngModel)]="matchDateTime" type="datetime-local"></td>
+            <td><input [(ngModel)]="scorePlayer1"></td>
+            <td><input [(ngModel)]="scorePlayer2"></td>
             <td><button (click)="saveMatchDatePoule(poule, match)">opslaan</button></td>
           </tr>
         </table>
@@ -34,6 +38,8 @@
             <th>vs</th>
             <th>Speler 2</th>
             <th>Speeldatum & tijd</th>
+            <th>Speler 1 Score</th>
+            <th>Speler 2 Score</th>
             <th>opslaan</th>
           </tr>
           <tr *ngFor="let match of round.matches">
@@ -41,6 +47,8 @@
             <td>vs</td>
             <td>{{ match.player2.name}}</td>
             <td><input [(ngModel)]="matchDateTime" type="datetime-local"></td>
+            <td><input [(ngModel)]="scorePlayer1"></td>
+            <td><input [(ngModel)]="scorePlayer2"></td>
             <td><button (click)="saveMatchDateRound(round, match)">opslaan</button></td>
           </tr>
         </table>
@@ -57,6 +65,8 @@
             <th>vs</th>
             <th>Speler 2</th>
             <th>Speeldatum & tijd</th>
+            <th>Speler 1 Score</th>
+            <th>Speler 2 Score</th>
             <th>opslaan</th>
           </tr>
           <tr *ngFor="let match of round.matches">
@@ -64,6 +74,8 @@
             <td>vs</td>
             <td>{{ match.player2.name}}</td>
             <td><input [(ngModel)]="matchDateTime" type="datetime-local"></td>
+            <td><input [(ngModel)]="scorePlayer1"></td>
+            <td><input [(ngModel)]="scorePlayer2"></td>
             <td><button (click)="saveMatchDateRound(round, match)">opslaan</button></td>
           </tr>
         </table>
